added main copy stuff

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <a href="#">Department calendar</a><span></span>
             <a href="#">Contact us</a>
             <a href="https://www.utah.edu">
-            <img src="files/u_small.gif" alt="University of Utah"/>
+                <img src="files/u_small.gif" alt="University of Utah"/>
             </a>
 
         </div>
 
         <div class="brown-box">
             <nav class="left-side">
-               <a href="#">About Us</a>
+                <a href="#">About Us</a>
                 <a href="#">Faculty & Staff</a>
                 <a href="#">Undergraduate Students</a>
                 <a href="#">Graduate Students</a>
@@ -40,7 +40,25 @@
                 <a href="#">Contact Us</a>
             </nav>
 
-            <article class="right-side"></article>
+            <article class="right-side">
+                <img src="files/women_w_pottery.jpg" alt="Women in Pottery"/>
+                <h2> News & Announcements</h2>
+
+                <p><span>The History of Women & Gender in Mexico:</span> How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?</p>
+
+                <div class="middle-nav">
+                    <a href="#">Campus directory</a><span></span>
+                    <a href="#">Department calendar</a><span></span>
+                    <a href="#">Contact us</a>
+                </div>
+            </article>
+
         </div>
 
         <div class="nav bottom-nav">
