added the nav link beneath the women with pottery photo, added an extra paragraph, and also cleared the float that was causing the design to break when the content in the right column grew too much.

--- a/index.html
+++ b/index.html
@@ -44,21 +44,23 @@
                 <img src="files/women_w_pottery.jpg" alt="Women in Pottery"/>
                 <h2> News & Announcements</h2>
 
-                <p><span>The History of Women & Gender in Mexico:</span> How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                <p><span>The History of Women & Gender in Mexico:</span> How much wood could a woodchuck chuck if a
+                    woodchuck could chuck wood?
                     How much wood could a woodchuck chuck if a woodchuck could chuck wood?
                     How much wood could a woodchuck chuck if a woodchuck could chuck wood?
                     How much wood could a woodchuck chuck if a woodchuck could chuck wood?
                     How much wood could a woodchuck chuck if a woodchuck could chuck wood?
                     How much wood could a woodchuck chuck if a woodchuck could chuck wood?
-                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?</p>
+                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                </p>
 
-                <div class="middle-nav">
-                    <a href="#">Campus directory</a><span></span>
-                    <a href="#">Department calendar</a><span></span>
-                    <a href="#">Contact us</a>
-                </div>
+                <p class="learn-more">
+                    <a href="#">More News & Announcements</a>
+                </p>
+
             </article>
 
+            <div class="clear-float"></div>
         </div>
 
         <div class="nav bottom-nav">
