--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     </section>
 
     <section class="content">
-
         <div class="nav top-nav">
             <a href="#">Campus directory</a><span></span>
             <a href="#">Department calendar</a><span></span>
-            <a href="#">Contact us</a>
+            <a href="#">Contact us</a><span></span>
             <a href="https://www.utah.edu">
                 <img src="files/u_small.gif" alt="University of Utah"/>
             </a>
@@ -44,21 +43,23 @@
                 <img src="files/women_w_pottery.jpg" alt="Women in Pottery"/>
                 <h2> News & Announcements</h2>
 
-                <p><span>The History of Women & Gender in Mexico:</span> How much wood could a woodchuck chuck if a
-                    woodchuck could chuck wood?
-                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
-                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
-                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
-                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
-                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
-                    How much wood could a woodchuck chuck if a woodchuck could chuck wood?
+                <p><span>The History of Women & Gender in Mexico:</span> Met wismodo lestrud mod ent lum dit
+                    nim iure erostis nos nulpute ming ea conse molore dipis nullutem numsan velis nisi blaor
+                    sequis nulputem quat ilit wismolortis ad dunt lutat eliquisl utat vulla conulla faccum vel
+                    inibh erci tie conulla feummod dolor aut accumsan vel esequisi bla adio odolorting erosto
+                    cor iriustie commod minciliquate tatum vero odipit, vulla feuisis molore tat, sim dit alis
                 </p>
 
-                <p class="learn-more">
+                <nav>
                     <a href="#">More News & Announcements</a>
-                </p>
-
+                </nav>
             </article>
+
+            <nav class="login">
+                <a href="#"><img src="files/login-humis.gif" alt="Login humis"/></a>
+
+                <a href="#"><img src="files/login-cis.gif" alt="Login cis"/></a>
+            </nav>
 
             <div class="clear-float"></div>
         </div>
@@ -68,14 +69,11 @@
             <a href="#">Text Only</a><span></span>
             <a href="#">Webmaster</a>
         </div>
-
     </section>
 
     <footer>
         380 SOUTH 1400 EAST | 211 C HALL | SALT LAKE CIT Y | UT | 84112 | PHONE 801.581.6121 | FAX 801.585.0580
     </footer>
 </div>
-
-
 </body>
 </html>
