Updated and enhanced my readme file

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <a href="#">Department calendar</a><span></span>
             <a href="#">Contact us</a><span></span>
             <a href="https://www.utah.edu">
-                <img src="files/u_small.gif" alt="University of Utah"/>
+                <img src="files/u_small.gif" align="absmiddle" alt="University of Utah"/>
             </a>
-
         </div>
 
         <div class="brown-box">
