Fixed some issues from professor's GitHub

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 
             <article class="right-side">
                 <img src="files/women_w_pottery.jpg" alt="Women in Pottery"/>
-                <h2> News & Announcements</h2>
+                <h2> News &amp; Announcements</h2>
 
-                <p><span>The History of Women & Gender in Mexico:</span> Met wismodo lestrud mod ent lum dit
+                <p>
+                    <span>The History of Women & Gender in Mexico:</span> Met wismodo lestrud mod ent lum dit
                     nim iure erostis nos nulpute ming ea conse molore dipis nullutem numsan velis nisi blaor
                     sequis nulputem quat ilit wismolortis ad dunt lutat eliquisl utat vulla conulla faccum vel
                     inibh erci tie conulla feummod dolor aut accumsan vel esequisi bla adio odolorting erosto
@@ -50,14 +51,20 @@
                 </p>
 
                 <nav>
-                    <a href="#">More News & Announcements</a>
+                    <a href="#">
+                        More News & Announcements
+                    </a>
                 </nav>
             </article>
 
             <nav class="login">
-                <a href="#"><img src="files/login-humis.gif" alt="Login humis"/></a>
+                <a href="#">
+                    <img src="files/login-humis.gif" alt="Login humis"/>
+                </a>
 
-                <a href="#"><img src="files/login-cis.gif" alt="Login cis"/></a>
+                <a href="#">
+                    <img src="files/login-cis.gif" alt="Login cis"/>
+                </a>
             </nav>
 
             <div class="clear-float"></div>
