Fixed some issues from professor's GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <nav>
                     <a href="#">
-                        More News & Announcements
+                        >> More News & Announcements
                     </a>
                 </nav>
             </article>
